<resources>
    <string name="app_name">LearEnglish</string>
    <string name="play_now">Play Now</string>
    <string name="capital">Capital</string>
    <string name="question1">Liquid water droplets condense from water vapor in the atmosphere and then become heavy enough to fall to the ground under the influence of gravity?</string>
    <string name="answer1">Rain</string>
    <string name="answer2">Sun</string>
    <string name="question2">a yellow main sequence star that accounts for about 99.8% of the total mass of the Solar System?</string>
    <string name="topic">Topic %s</string>
    <string name="submit">Submit</string>
    <string name="select_topic">Select Topic</string>
    <string name="my_point">Point: %s</string>
    <string name="rank">Ratings</string>
    <string name="question3">Turbulence of the atmosphere and is a type of extreme weather?</string>
    <string name="answer3">Storm</string>
    <string name="question4">Large-scale movements of air?</string>
    <string name="answer4">Windy</string>
    <string name="question5">The phenomenon of dispersion of light from the Sun when refracted and reflected through raindrops.?</string>
    <string name="answer5">Rainbow</string>
    <string name="question6">A natural phenomenon, like rain but rain of small ice crystals?</string>
    <string name="answer6">Snow</string>
    <string name="question7">the phenomenon of water vapor in the atmosphere condensing into very small water droplets that float in the air and reduce our visibility?</string>
    <string name="answer7">Fog</string>
    <string name="question8">It is water vapor in the form of a gas that exists in space and cannot be seen with the naked eye?</string>
    <string name="answer8">Humidity</string>
    <string name="question9">The sound is caused by lightning and is a natural phenomenon?</string>
    <string name="answer9">Thunder</string>
    <string name="question10">Solid form of water?</string>
    <string name="answer10">Ice</string>
    <string name="top_rank">%s Point</string>
    <string name="music">Music</string>
    <string name="family">Family</string>
    <string name="animal">Animal</string>
    <string name="no_question">There are no questions for this topic yet.</string>
    <string name="question11">I have four legs.\n I live in the field.\n I am cunning or sly.\n I love chickens</string>
    <string name="answer11">Fox</string>
    <string name="question12">I am from Australia.\n I have a pocket for a baby.\n I hop and hop.\n I call my baby Joey</string>
    <string name="answer12">kangaroo</string>
    <string name="other">Other</string>
    <string name="type_question">Type question</string>
    <string name="type_answer">Type answer</string>
    <string name="add">Add</string>
    <string name="add_question">Create question</string>
    <string name="add_success">Add Success</string>
    <string name="warning_add">No question or answer entered yet</string>
    <string name="type_user">User Name</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_user_name">Have not entered the user name</string>
    <string name="not_password">Have not entered the password</string>
    <string name="weather">Weather</string>
    <string name="logout">Logout</string>
    <string name="text">text</string>
    <string name="description">Description</string>
</resources>