<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <RelativeLayout
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_centerVertical="true"
            android:id="@+id/ivBack"
            android:tint="@color/gray"
            android:layout_width="40dp"
            android:layout_marginLeft="12dp"
            android:padding="4dp"
            android:src="@drawable/ic_arrow_back"
            android:layout_height="40dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_centerInParent="true"
            android:textColor="@color/colorPrimary"
            android:textSize="17dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:text="@string/select_topic"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <Spinner
        android:layout_margin="12dp"
        android:id="@+id/spinnerTopic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Spinner>

   <androidx.appcompat.widget.AppCompatEditText
       android:gravity="top"
       android:hint="@string/type_question"
       android:background="@drawable/bg_radius_blue"
       android:padding="12dp"
       android:layout_margin="12dp"
       android:id="@+id/edQuestion"
       android:layout_width="match_parent"
       android:minHeight="100dp"
       android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:gravity="top"
        android:hint="@string/type_answer"
        android:background="@drawable/bg_radius_blue"
        android:padding="12dp"
        android:layout_margin="12dp"
        android:id="@+id/edAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:gravity="top"
        android:hint="@string/description"
        android:background="@drawable/bg_radius_blue"
        android:padding="12dp"
        android:layout_margin="12dp"
        android:id="@+id/edDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:gravity="center"
        android:id="@+id/tvAdd"
        android:textSize="17sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/add"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>
</LinearLayout>